spacing issues fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@ body{
   /*default dark mode: rgb(20, 21, 24), default light mode: rgb(187, 217, 244)
     default mode: rgb(14, 18, 24)*/ 
   /*rgb(7, 12, 22)    rgb(16, 21, 39)  rgb(11, 14, 19) rgb(170, 197, 223)*/ 
-  color:  rgb(153, 172, 189);
+  color:  rgb(136, 153, 168);
 }
 
 
